feat(rabbitmq): update docker compose

--- a/conf/james-server.properties
+++ b/conf/james-server.properties
@@ -11,11 +11,11 @@ imap.enabled=true
 imap.bind=0.0.0.0:143
 
 # ========== IMAPS (secure IMAP) ==========
-imaps.enabled=true
+imaps.enabled=false
 imaps.bind=0.0.0.0:993
 
 # ========== SMTPS (secure SMTP) ==========
-smtps.enabled=true
+smtps.enabled=false
 smtps.bind=0.0.0.0:465
 
 # ========== Submission (authenticated email sending) ==========
