feat(rabbitmq): change to use id only. it works as normal

--- a/conf/rabbitmq.properties
+++ b/conf/rabbitmq.properties
@@ -7,3 +7,4 @@ rabbitmq.virtualHost=/
 rabbitmq.inputQueue=james.email.actions
 rabbitmq.outputExchange=james.email.results
 rabbitmq.outputRoutingKey=result
+uri=amqp://james:secret@rabbitmq:5672
